--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,8 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6061710286208572"
+     crossorigin="anonymous"></script>
 
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
